Fix nav overlap: justify-content flex-start on desktop menu

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -913,7 +913,7 @@
 
   .ce-nav__menu {
     flex: 1;
-    justify-content: center;
+    justify-content: flex-start;
     min-width: 0;
     padding-bottom: 0;
     border-bottom: 0;
